// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 1`] = `
"  ⌂  ●❯                                                                    live
  tmux              ● main    ● workin…                                       +
 ● main               ● Codex                   ● workin… ⋯
 ○ website          CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                     main  Live                                              F5"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 2`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                  ● main    ● workin…                                                            + New window
 ● main                       ● Codex                   ● workin… ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                             main  Terminals  Live                                                          F5 Commands"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 3`] = `
"   tmux-ide  F1  ⌂ Home  F2 ●❯ Terminals                                                                                                                                                           live
  tmux-ide                  ● main    ● workin…                                                                                                                                            + New window
 ● main                       ● Codex                   ● workin… ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                             tmux-ide  main  Terminals  Live                                                                                                                                F5 Commands"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 1`] = `
"  ⌂  ●❯                live
 t╭──────────────────────╮
 m│ Command palette      │
 2│ › F1 Home            │
 C│ F2 Terminals         │…
  │ New terminal window  │
  │ Split pane right     │
  ╰──────────────────────╯
 main  Live              F5"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 2`] = `
"  ⌂  ●❯        live
 t╭──────────────╮
 m│ Commands     │
 2│ › F1 Home    │w
 C│ F2 Terminals │…
  ╰──────────────╯…
  ○ Commands F5"
`;

exports[`production ApplicationShellView preserves canonical attention while prioritizing mixed window activity 1`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                  ! main    ! workin…                                                            + New window
 ● main                       ● Codex                   ● workin… ⋯   ! Scout                     ! idle  ⋯
                            CANONICAL-CELL                          CANONICAL-CELL
 Agents
 • Codex [WORKING]
 ! Scout ! [IDLE]



…

                             main  Terminals  Live                                                          F5 Commands"
`;
